# trip-time-service

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  Jenkinsfile  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
deploy/enm/: deploy.sh  (+1 more)
docs/: playwright-phase2-boundary.md
scripts/: benchmark_autocomplete_latency.py  verify_ui_departure_search.py
tests/: test_api.py  test_api_streaming_routes.py  test_autocomplete_selection.py  test_autocomplete_v2_dataset.py  test_autocomplete_v2_stability.py  test_autocomplete_warmup_backoff.py  test_cache.py  test_chrome_driver.py  test_coordinate_aware_provider.py  test_deploy_security_defaults.py  test_deploy_version_env.py  test_fixture_mode_runtime.py  test_geo_route_security.py  test_geocode_live.py  test_geocode_runtime.py  test_live_summary_artifact.py  test_logging_privacy.py  test_main_port_fallback.py  test_models.py  test_naver_browser_autocomplete.py  test_naver_geo_shutdown.py  test_naver_playwright_adapter_seams.py  test_naver_playwright_calendar.py  test_naver_playwright_parsing.py  test_naver_selenium_adapter_seams.py  test_naver_selenium_calendar.py  test_naver_selenium_parsing.py  test_playwright_runtime.py  test_pre_geocode_timeout.py  test_provider_error_classification.py  test_route_input_contract.py  test_routes_geo_fixture_mode.py  test_security_hardening.py  test_shutdown_resilience.py  test_static_app_js_search_generation.py  test_static_css.py  test_time_utils.py  test_trip_time_service.py  test_trip_time_service_provider_session.py  test_versioning.py
(+72 files in other folders)
