[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trip-time-service"
version = "0.1.0"
description = "네이버 지도(차량) 기반 소요시간/추천 출발시각 서비스"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "selenium>=4.16",
  "tzdata>=2024.1; platform_system == 'Windows'",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
trip-time-service = "trip_time_service.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trip_time_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
